--- a/res/layout/usageentry.xml
+++ b/res/layout/usageentry.xml
@@ -2,40 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:baselineAligned="false"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="60dip"
+    <LinearLayout
+        android:id="@+id/llUsage"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
+        android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/imgIcon"
-        android:layout_width="16dip"
-        android:layout_height="16dip"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="2dip"
-        android:contentDescription="@string/help_application" />
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="60dip"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textIsSelectable="false" />
 
-    <ImageView
-        android:id="@+id/imgRestricted"
-        android:layout_width="16dip"
-        android:layout_height="16dip"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="2dip"
-        android:contentDescription="@string/help_used"
-        android:src="@drawable/presence_busy" />
+        <ImageView
+            android:id="@+id/imgIcon"
+            android:layout_width="16dip"
+            android:layout_height="16dip"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="2dip"
+            android:contentDescription="@string/help_application" />
 
-    <TextView
-        android:id="@+id/tvApp"
-        android:layout_width="45dip"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
+        <ImageView
+            android:id="@+id/imgRestricted"
+            android:layout_width="16dip"
+            android:layout_height="16dip"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="2dip"
+            android:contentDescription="@string/help_used"
+            android:src="@drawable/presence_busy" />
+
+        <TextView
+            android:id="@+id/tvApp"
+            android:layout_width="45dip"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textIsSelectable="false" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dip"
