--- a/res/layout/whitelistentry.xml
+++ b/res/layout/whitelistentry.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
@@ -19,6 +20,7 @@
         android:layout_width="32dip"
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/delete" />
+        android:src="@drawable/delete"
+        tools:ignore="ContentDescription" />
 
 </LinearLayout>
