--- a/res/layout/sharelist.xml
+++ b/res/layout/sharelist.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:id="@+id/llHeader"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
@@ -24,9 +24,17 @@
             android:autoLink="web"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <CheckBox
+            android:id="@+id/cbClear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/menu_clear"
+            android:visibility="gone" />
+
         <RadioGroup
             android:id="@+id/rgToggle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="gone" >
