--- a/res/layout/shareentry.xml
+++ b/res/layout/shareentry.xml
@@ -40,7 +40,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@id/imgResult"
+        android:ellipsize="end"
         android:paddingRight="3dip"
+        android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
