--- a/res/layout/sharelist.xml
+++ b/res/layout/sharelist.xml
@@ -22,6 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="web"
+            android:ellipsize="start"
+            android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <CheckBox
